k8s-yaml/api/dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: api
  name: api
  namespace: armory
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 7
  selector:
    matchLabels:
      name: api
  template:
    metadata:
      labels:
        app: api
        name: api
    spec:
      containers:
      - name: api
        image: harbor.od.com/armory/api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          protocol: TCP
        volumeMounts:
        - mountPath: /media
          name: media
        - mountPath: /static
          name: static
      imagePullSecrets:
      - name: harbor
      volumes:
      - nfs:
          server: hdss7-200.host.com
          path: /data/nfs-volume/api/media
        name: media 
      - nfs:
          server: hdss7-200.host.com
          path: /data/nfs-volume/api/static
        name: static
