k8s-yaml/api/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: armory
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: api
