k8s-yaml/api/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: api
  namespace: armory
spec:
  rules:
  - host: api.od.com
    http:
      paths:
      - path: /
        backend:
          serviceName: api
          servicePort: 80
